--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "keywords": [
     "react",
@@ -21,8 +22,10 @@
     "babel-loader": "^8.2.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
@@ -30,6 +33,7 @@
   "devDependencies": {
     "css-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.0",
+    "prettier": "^2.7.1",
     "sass": "^1.38.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1"
